--- a/css/css.css
+++ b/css/css.css
@@ -3,3 +3,21 @@ body{
 	 margin: 0;
 	 padding: 0;
 }
+.frame{	
+	position: relative;
+	width: 960px;
+	height: auto;
+	margin-left: auto;
+	margin-right: auto;
+	top:250px;
+	background-color: rgb(238,238,238); 
+	@include filter-gradient(#eeeeee, #cccccc, horizontal);
+	@include background-image(radial-gradient(center, ellipse cover, rgba(238,238,238,1) 0%,rgba(204,204,204,1) 100%));
+	border-radius:50px;
+	-moz-border-radius:50px;
+	-webkit-border-radius:50px;
+	padding-bottom: 40px;
+	-webkit-box-shadow:0px 0px 81px 0px #000000 ;
+	-moz-box-shadow:0px 0px 81px 0px #000000 ;
+	box-shadow:0px 0px 81px 0px #000000 ;
+}
