--- a/css/css.css
+++ b/css/css.css
@@ -21,3 +21,23 @@ body{
 	-moz-box-shadow:0px 0px 81px 0px #000000 ;
 	box-shadow:0px 0px 81px 0px #000000 ;
 }
+.st1{
+    font-size: 120%; 
+    font-family: 'Times New Roman', serif; 
+    color: #black; 
+	text-align: justify;	
+	text-indent: 20px;
+	padding: 100px 150px 0px 100px;
+
+}
+.st2{
+    font-size: 100%; 
+    font-family: 'Times New Roman', serif; 
+    color: #black; 
+	text-align: justify;	
+	text-indent: 20px;
+	position: relative;	
+	width: 50%;	
+	left: 15%;
+	padding-bottom: 40px;
+}
