--- a/css/css.css
+++ b/css/css.css
@@ -1,5 +1,5 @@
 body{
-	 background: #FFF;
+	 background: #FFE4E1;
 	 margin: 0;
 	 padding: 0;
 }
@@ -22,7 +22,7 @@ body{
 	box-shadow:0px 0px 81px 0px #000000 ;
 }
 .st1{
-    font-size: 120%; 
+    font-size: 100%; 
     font-family: 'Times New Roman', serif; 
     color: #black; 
 	text-align: justify;	
