--- a/css/css.css
+++ b/css/css.css
@@ -21,16 +21,7 @@ body{
 	-moz-box-shadow:0px 0px 81px 0px #000000 ;
 	box-shadow:0px 0px 81px 0px #000000 ;
 }
-.st1{
-    font-size: 100%; 
-    font-family: 'Times New Roman', serif; 
-    color: #black; 
-	text-align: justify;	
-	text-indent: 20px;
-	padding: 100px 150px 0px 100px;
-
-}
-.st2{
+.st{
     font-size: 100%; 
     font-family: 'Times New Roman', serif; 
     color: #black; 
