--- a/css/css.css
+++ b/css/css.css
@@ -7,9 +7,10 @@ body{
 	position: relative;
 	width: 960px;
 	height: auto;
-	margin-left: auto;
-	margin-right: auto;
-	top:250px;
+	margin-left: 10px;
+	margin-right: 10px;
+	margin-top: 10px;
+	top:50px;
 	background-color: rgb(238,238,238); 
 	@include filter-gradient(#eeeeee, #cccccc, horizontal);
 	@include background-image(radial-gradient(center, ellipse cover, rgba(238,238,238,1) 0%,rgba(204,204,204,1) 100%));
@@ -27,8 +28,7 @@ body{
     color: #black; 
 	text-align: justify;	
 	text-indent: 20px;
-	position: relative;	
-	width: 50%;	
+	position: relative	
 	left: 15%;
 	padding-bottom: 40px;
 }
