--- a/css/css.css
+++ b/css/css.css
@@ -1,8 +1,18 @@
 body{
 	 background: #e1e5ff;
 }
+a:link { text-decoration: none;  } 
+a:visited { text-decoration: none; } 
+a:active { text-decoration: none; }
+a:hover {
+    text-decoration: underline; 
+    color: red;
+}
+
 .frame{	
 	position: relative;
+	padding: 20px; 
+    	margin: auto;
 	width: 1000px;
 	height: auto;
 	margin-left: 10px;
@@ -15,7 +25,6 @@ body{
 	border-radius:50px;
 	-moz-border-radius:50px;
 	-webkit-border-radius:50px;
-	padding-bottom: 40px;
 	-webkit-box-shadow:0px 0px 81px 0px #000000 ;
 	-moz-box-shadow:0px 0px 81px 0px #000000 ;
 	box-shadow:0px 0px 81px 0px #000000 ;
