--- a/css/css.css
+++ b/css/css.css
@@ -12,11 +12,10 @@ a:hover {
 .frame{	
 	position: relative;
 	padding: 20px; 
-    	margin: auto;
 	width: 1000px;
 	height: auto;
-	margin-left: 10px;
-	margin-right: 10px;
+	margin-left: auto;
+	margin-right: auto;
 	margin-top: 20px;
 	top:50px;
 	background-color: rgb(238,238,238); 
